Edited banner & article

--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
     <!--HEADER-->
     <header>
         <!--logo-->
-        <div id="header-logo">
+        <section id="full-header">
+                 "<div id="header-logo">
             <img class="logo" src="img/cool-ham.jpg" />
         </div>
+
         <!--title-->
-        <h1 id="header-name">Off-Broadway Shirt Company</h1>
+        <span id="header-name">Off-Broadway Shirt Company</span>
+
         <!--search-->
         <input type="search" id="search" placeholder="Search..." />
+        </section>
     </header>
 
 
@@ -24,9 +28,9 @@
         <!--Main Image-->
         <div>
             <img id="main-image" src="img/banner.jpg" />
-        </div>
+        </div> 
         <!--Side Image-->
-        <div>
+        <div>  
             <img id="side-image" src="img/ben-banner.jpg" />
         </div>   
     </section>
@@ -37,16 +41,25 @@
     </section>
 
     <!--PLAYBILL NEWS-->
-
+    <article id="recent-news">
+        <header>Playbill News</header>
+        <ul>
+            <li><a href="#">Story from Playbill</a></li>
+            <li><a href="#">Story from Playbill</a></li>
+            <li><a href="#">Story from Playbill</a></li>
+            <li><a href="#">Story from Playbill</a></li>
+            <li><a href="#">Story from Playbill</a></li>
+        </ul>
+    </article>
     <!--PRODUCTS-->
 
     <!--MAIN-->
-        <h1>BRANCH TEST</h1>
-    <!--FOOTER-->
+        
+    <!--FOOTER
     <footer>
         <p>Address: <address>24601 Broad Ln</address></p>
         <p>Updated last at <time>11:36</time></p>
-    </footer>
+    </footer> -->
 
 </body>
 </html>
