Added main and products

--- a/index.html
+++ b/index.html
@@ -44,17 +44,37 @@
     <article id="recent-news">
         <header>Playbill News</header>
         <ul>
-            <li><a href="#">Story from Playbill</a></li>
-            <li><a href="#">Story from Playbill</a></li>
-            <li><a href="#">Story from Playbill</a></li>
-            <li><a href="#">Story from Playbill</a></li>
-            <li><a href="#">Story from Playbill</a></li>
+            <li><a href="#" target="_blank">Story from Playbill</a></li>
+            <li><a href="#" target="_blank">Story from Playbill</a></li>
+            <li><a href="#" target="_blank">Story from Playbill</a></li>
+            <li><a href="#" target="_blank">Story from Playbill</a></li>
+            <li><a href="#" target="_blank">Story from Playbill</a></li>
         </ul>
     </article>
-    <!--PRODUCTS-->
+       
 
     <!--MAIN-->
-        
+    <section id="main">
+        <header id="shirt-header">Your one stop shop for Broadway merch!</header>
+
+        <header id="header-title">Products</header>
+        <!--PRODUCTS-->
+        <section class="products">
+            <article class="product-article">
+                <figure>
+                    <img class="product-thumbnail" src="img/hamilton.jpg" />
+                </figure>
+                <header>
+                    <span class="product-name"></span>
+                </header>
+                <p>$19.99</p>
+                <div class="add-to-cart">
+                    Add to cart
+                </div>
+            </article>
+        </section>
+
+    </section>    
     <!--FOOTER
     <footer>
         <p>Address: <address>24601 Broad Ln</address></p>
